--- a/src/components/Articles.module.css
+++ b/src/components/Articles.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    margin: 76px auto 20px auto;
     padding-top: 20px;
     background-color: #839695;
 }
