--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,110 @@
 .header {
-    position: fixed;
-    background-color: #112b3e !important;
-    width: 100%;
+    height: 83px;
+    text-decoration: none;
+    background-color: #112B3E;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    position: sticky;
     top: 0;
-    color: #ffffff;
-}
-
-.navbarBrand {
-    margin-right: 20px;
-    color: #fff;
+    left: 0;
+    right: 0;
+    z-index: 1;
+  }
+  
+  .header-link {
+    font-family: sans-serif;
+    color: white;
     text-decoration: none;
-}
-
-.navbarLink {
-    color: #fff !important;
-    text-decoration: none;
-}
-
-/* .header a {
-    color: #fff;
-}
-
-.header a:active {
-    color: #fff;
-}
-
-.navbar-brand a {
-    color: #fff;
-}
-
-.nav-item {
-    color: #fff;
-} */
+    font-size: 20px;
+    margin-left: 20px;
+  }
+  
+  .articles-body {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between ;
+    margin-bottom: 20px;
+    padding: 40px;
+    background-color: #839695;
+  }
+  
+  .loading-body{
+    font-family: sans-serif;
+    width: 100%;
+    height: 100vh;
+    background-color: #839695;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 36px;
+  }
+  
+  .articles-post {
+    width: calc(32% - 10px);
+    background-color: #112B3E;
+    margin-bottom: 30px;
+    transition: transform 0.4s ease;
+  }
+  
+  .articles-post:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.8);
+  }
+  
+  .articles-img {
+    width: 100%;
+  }
+  
+  .articles-title-wrapper {
+    display: flex;
+    text-align: center;
+    margin: 20px;
+  }
+  
+  .articles-title {
+    font-family: sans-serif;
+    color: white;
+    text-decoration: underline;
+    font-size: calc(9px + 2vmin);
+  }
+  
+  .article-wrapper { 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'Roboto Slab';
+    margin-bottom: 20px;
+    background-color: #839695;
+  }
+  
+  .article-body {
+    max-width: 1200px;
+    padding: 50px;
+  }
+  
+  .article-title {
+  color: #ffffff;
+  }
+  
+  .article-img {
+    width: 100%;
+  }
+  
+  .article-description {
+    margin-top: 40px;
+   font-size: 17px;
+  }
+  
+  .article-expertComment {
+   font-size: 14px;
+   max-width: 100%;
+   height: auto;
+   background-color: white;
+   padding: 5px 30px 20px 30px;
+  }
+  
+  .article-expertComment-title {
+    line-height: 0;
+    font-weight: bold;
+  }
